--- a/templates/base_public.html
+++ b/templates/base_public.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %} - Family Dashboard</title>
+    <title>{% block title %}{% endblock %} - Framily Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     {% block extra_css %}{% endblock %}
 </head>
