--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-gray-50 px-5 py-3">
+        <div class="bg-gray-50 px-5 py-3 mt-6">
             <div class="text-sm">
                 <a href="/finances" class="font-medium text-indigo-600 hover:text-indigo-500">
                     Ver finanças
